Added async API client waiting for the generator to support HTTPX (see https://github.com/OpenAPITools/openapi-generator/issues/19255, we may want to contribute)

--- a/generators/python/config.json
+++ b/generators/python/config.json
@@ -1,5 +1,6 @@
 {
     "hideGenerationTimestamp": true,
+    "library": "urllib3",
     "packageName": "opendatasoft_explore",
     "packageVersion": "21.0.1",
     "projectName": "Opendatasoft Explore API Client"
